# SIH_BE

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  env_example  pyproject.toml
auth_abha/: apps.py
config/: settings.py  urls.py
data/: ICD-11-MMS-en-HF.csv  ayurveda_morbidity_codes_all.xlsx  siddha_morbidity_codes_all.xlsx  unani_morbidity_codes_all.xlsx
terminologies/: apps.py  models.py  serializers.py  urls.py  views.py
terminologies/management/commands/: load_ayurveda.py  load_icd11.py  load_siddha.py  load_unani.py
terminologies/migrations/: 0001_initial.py  0002_rename_medical_code_ayurvedhamodel_code_and_more.py  0003_icdclasskind_icd11term.py  0004_alter_icd11term_class_kind_alter_icd11term_table.py  0005_add_pg_trgm_extension.py
