[project]
name = "django-postgre-docker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.5",
    "django-admin-interface>=0.30.1",
    "django-colorfield>=0.14.0",
    "django-cors-headers>=4.8.0",
    "django-oauth-toolkit>=3.0.1",
    "django-stubs>=5.2.2",
    "djangorestframework>=3.16.1",
    "dotenv>=0.9.9",
    "gunicorn>=23.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "pylint>=3.3.8",
    "ruff>=0.12.12",
    "uvicorn>=0.35.0",
]
